Momenteel is de example module nog niet goedgezet qua layout. Kan je dit rechtzetten. Closes Netlash | Fork NG | Ticket #439: Layout issue
git-svn-id: svn://gallium.openminds.be/opt/svn/fork2/trunk@991 869247f0-a1f3-4d5c-9449-4b73fc252fa6

--- a/default_www/backend/core/layout/css/imports/core_modules.css
+++ b/default_www/backend/core/layout/css/imports/core_modules.css
@@ -400,6 +400,18 @@
 	}
 
 /*
+	Example
+*/
+
+	/*
+		Layout
+	*/
+	
+	#example.layout #test {
+		
+	}
+
+/*
 	Tags
 */
 
